LeasedLineTools/src/objects/Talk_Talk_Product__c.object
<CustomObject>
    <fields>
        <fullName>Collector_Exchange_Name__c</fullName>
        <label>Collector Exchange Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ethernet_Exchange_Name__c</fullName>
        <label>Ethernet Exchange Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fibre_Exchange_Name__c</fullName>
        <label>Fibre Exchange Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Installation Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Charges</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Id</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Talk Talk Products</relationshipLabel>
        <relationshipName>Talk_Talk_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Term__c</fullName>
        <label>Product Term</label>
        <picklist>
            <picklistValues>
                <fullName>1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>10MB / 100MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20MB / 100MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30MB / 100MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40MB / 100MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50MB / 100MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100MB / 100MB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Ref__c</fullName>
        <description>Leased Line Quote Request foreign key</description>
        <label>Site Ref</label>
        <referenceTo>Leased_Line_Quote_Request__c</referenceTo>
        <relationshipLabel>Talk Talk Products</relationshipLabel>
        <relationshipName>Talk_Talk_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Field used by the upsert function - a combination of Leased_Line_Quote_Request__c and Product__c</description>
        <externalId>true</externalId>
        <label>Unique</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>View_Details</fullName>
        <columns>NAME</columns>
        <columns>Site_Ref__c</columns>
        <columns>Product__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>View Details</label>
    </listViews>
</CustomObject>